--- a/app前端/package.json
+++ b/app前端/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.6.5",
     "default-passive-events": "^2.0.0",
     "mint-ui": "^2.2.13",
+    "vant": "^2.12.37",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-video-player": "^5.0.2",
